trying to populate DOCTOR dropdown

--- a/views/patient/add.ejs
+++ b/views/patient/add.ejs
@@ -33,6 +33,30 @@
                                 autocomplete="off">
                         </div>
                         <div class="form-group">
+                            <label>Date of Birth:</label>
+                            <input type="date" class="form-control" name="dob" value="<%= dob %>" autocomplete="off">
+                        </div>
+                        <div class="form-group">
+                            <label>Phone:</label>
+                            <input type="number" class="form-control" name="phone" value="<%= phone %>"
+                                autocomplete="off">
+                        </div>
+                        <div class="form-group">
+                            <label>Email:</label>
+                            <input type="email" class="form-control" name="email" value="<%= email %>"
+                                autocomplete="off">
+                        </div>
+                        <div class="form-group">
+                            <label>Doctor</label>
+                            <select class="form-control" name="doctor" value="<%= doctor %>" autocomplete="off">>
+                                <option>Jonny Brigham</option>
+                                <option>Katherine Delaney</option>
+                                <option>Ciera Jennie</option>
+                                <option>Cletis Braylon</option>
+                                <option>Braiden Keeley</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
                             <input type="submit" class="btn btn-info" value="Add" />
                         </div>
                     </form>
