--- a/views/patient/index.ejs
+++ b/views/patient/index.ejs
@@ -45,7 +45,9 @@
                                             <th scope="col">Date of Birth</th>
                                             <th scope="col">Phone</th>
                                             <th scope="col">Email</th>
-                                            <th width="200px">Doctor</th>
+                                            <th scope="col">Doctor</th>
+                                            <th scope="col">Speciality</th>
+                                            <th scope="col">Last Appointment</th>
                                             <th width="200px">Action</th>
 
                                         </tr>
@@ -74,7 +76,13 @@
                                                 <td>
                                                     <%=data[i].doctor%>
 
+                                                </td>
+                                                <td>
+                                                    <%=data[i].speciality%>
 
+                                                </td>
+                                                <td>
+                                                    <%=data[i].lastappointment%>
 
                                                 </td>
                                                 <td>
