--- a/views/patient/edit.ejs
+++ b/views/patient/edit.ejs
@@ -34,21 +34,20 @@
                         </div>
                         <div class="form-group">
                             <label>Date of Birth:</label>
-                            <input type="text" class="form-control" name="dob" value="<%= dob %>" autocomplete="off">
+                            <input type="date" class="form-control" name="dob" value="<%= dob %>" autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label>Phone:</label>
-                            <input type="text" class="form-control" name="phone" value="<%= phone %>"
-                                autocomplete="off">
+                            <input type="tel" class="form-control" name="phone" value="<%= phone %>" autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label>Email:</label>
-                            <input type="text" class="form-control" name="email" value="<%= email %>"
+                            <input type="email" class="form-control" name="email" value="<%= email %>"
                                 autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label>Doctor</label>
-                            <select class="form-control" name="doctor" value="<%= doctor %>" autocomplete="off">>
+                            <select class="form-control" name="doctor" value="<%= doctor%>" autocomplete="off">>
                                 <option>Jonny Brigham</option>
                                 <option>Katherine Delaney</option>
                                 <option>Ciera Jennie</option>
@@ -56,7 +55,21 @@
                                 <option>Braiden Keeley</option>
                             </select>
                         </div>
-
+                        <div class="form-group">
+                            <label>Speciality</label>
+                            <select class="form-control" name="speciality" value="<%= speciality%>" autocomplete="off">>
+                                <option>Cardiologist</option>
+                                <option>Dermatologist</option>
+                                <option>Neurologist</option>
+                                <option>Oncologist</option>
+                                <option>Pediatrician</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Last Appointment:</label>
+                            <input type="date" class="form-control" name="lastappointment"
+                                value="<%= lastappointment %>" autocomplete="off">
+                        </div>
 
                         <div class="form-group">
                             <input type="submit" class="btn btn-info" value="Update" />
