--- a/views/patient/add.ejs
+++ b/views/patient/add.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Add User</title>
+    <title>Add Patient</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
@@ -17,8 +17,8 @@
         <% } %>
 
             <div class="card">
-                <div class="card-header">
-                    Add User
+                <div class="card-header bg-info text-white">
+                    Add Patient
                 </div>
                 <div class="card-body">
                     <form action="/patient/add" method="post">
