--- a/views/patient/index.ejs
+++ b/views/patient/index.ejs
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Users</title>
+    <title>Patients</title>
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
-<body class="container" style="margin-top: 50px;">
+<body class="container"
+    style="margin-top: 50px; background-image: url(https://images.unsplash.com/photo-1557825835-a526494be845?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);">
 
     <% if (messages.success) { %>
         <div class="alert alert-success" role="alert">
@@ -23,22 +25,24 @@
                 <% } %>
 
                     <div class="card">
-                        <div class="card-header">
-                            <ul class="nav nav-pills w-100">
+                        <div class="card-header bg-info">
+                            <ul class="nav nav-pills w-100 ">
                                 <li class="nav-pill active">
-                                    <a class="nav-link">Users</a>
+                                    <a class="nav-link text-white">Patient Information</a>
                                 </li>
-                                <li class="nav-pill ml-auto">
-                                    <a class="nav-link active" href="/patient/add">Add User</a>
+                                <li class="nav-pill ml-auto mr-auto rounded">
+                                    <a class="nav-link active rounded bg-light text-info"
+                                        style="font-size: 12px; font-weight: bold;" href="/patient/add">Add
+                                        Patient</a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body ">
 
                             <% if(data.length) { %>
                                 <table class="table">
                                     <thead>
-                                        <tr>
+                                        <tr style="font-size: 13px">
                                             <th scope="col">#</th>
                                             <th scope="col">First Name</th>
                                             <th scope="col">Last Name</th>
@@ -52,7 +56,7 @@
 
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody style="font-size: 12px;">
                                         <% for(var i=0; i< data.length; i++) { %>
                                             <tr>
                                                 <th scope="row">
@@ -85,10 +89,12 @@
                                                     <%=data[i].lastappointment%>
 
                                                 </td>
-                                                <td>
-                                                    <a class="btn btn-success edit"
+                                                <td style="display: flex; ">
+                                                    <a class="btn btn-success "
+                                                        style=" font-size: 10px; margin-right: 5px; background-color: darkcyan;"
                                                         href="../patient/edit/<%=data[i].id%>">Edit</a>
                                                     <a class="btn btn-danger delete"
+                                                        style="font-size: 10px; background-color: darkred;"
                                                         onclick="return alert('Are You sure?')"
                                                         href="../patient/delete/<%=data[i].id%>">Delete</a>
                                                 </td>
@@ -98,9 +104,8 @@
                                 </table>
                                 <% } %>
 
-                                    <!-- if result is empty -->
                                     <% if(!data.length) { %>
-                                        <p class="text-center">No user found!</p>
+                                        <p class="text-center">No patient found!</p>
                                         <% } %>
 
                         </div>
